# lamella

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
benches/: layout_bench.rs  window_bench.rs
crates/fluxway-backend-winit/: Cargo.toml
crates/fluxway-backend-winit/src/: lib.rs
crates/fluxway-core/: Cargo.toml
crates/fluxway-core/src/: event.rs  invariants.rs  layout.rs  lib.rs  state.rs  window.rs  workspace.rs
crates/fluxway-core/tests/: core_integration.rs
src/: compositor.rs  config.rs  input.rs  ipc.rs  layout.rs  main.rs  render.rs  state.rs  window.rs  workspace.rs  x11_compat.rs
