[package]
name = "fluxway"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Fluxway Contributors"]
description = "A lightweight, highly scalable tiling window manager combining the best of i3, Sway, and Fluxbox"
license = "MIT"
repository = "https://github.com/geket/lamella"
keywords = ["wayland", "window-manager", "tiling", "compositor", "x11"]
categories = ["gui"]
readme = "README.md"
exclude = [
    ".github/",
    "tests/",
    "benches/",
    "*.md",
    "!README.md",
]

[features]
default = ["wayland", "xwayland", "ipc"]
# Wayland compositor support (primary)
wayland = []
# XWayland bridge for X11 apps in Wayland
xwayland = ["dep:x11rb"]
# Native X11 window manager mode (backwards compatibility)
x11 = ["dep:x11rb", "dep:xcb", "dep:x11"]
# IPC server for external control (i3-compatible)
ipc = []
# Multi-output workspace management
multi-output = []
# Animation support
animations = []
# All features enabled
full = ["wayland", "xwayland", "x11", "ipc", "multi-output", "animations"]

[lints.rust]
unsafe_code = "warn"
missing_docs = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# =============================================================================
# Window Manager / Compositor Specific Allows
# =============================================================================
# These patterns are intentional and correct for compositor development.
# See: Fluxway Lint Remediation Guide

# Structural patterns common in window managers
module_name_repetitions = "allow"
too_many_lines = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"

# Numeric casts - compositor geometry requires explicit truncation in hot paths.
# These are allowed at crate level but should be audited per-function.
# Pointer motion, resize handlers, and frame rendering legitimately truncate.
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"

# Multiple crate versions - transitive deps from smithay/wayland ecosystem.
# Tracked for future unification but not blocking.
multiple_crate_versions = "allow"

[dependencies]
# Wayland compositor framework
smithay = { version = "0.3", default-features = false, features = [
    "backend_drm",
    "backend_libinput", 
    "backend_udev",
    "backend_session_libseat",
    "backend_winit",
    "renderer_gl",
    "wayland_frontend",
    "xwayland",
] }

# Async runtime and event loop (matching smithay 0.3's calloop version)
calloop = "0.9"

# Serialization for config and IPC
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# IPC
interprocess = "1.2"

# CLI
clap = { version = "4.3", features = ["derive"] }

# XWayland support and X11 native mode
x11rb = { version = "0.12", optional = true, features = ["composite", "randr", "render", "shape", "xfixes", "xinput"] }
xcb = { version = "1.3", optional = true }
x11 = { version = "2.21", optional = true }

# Input handling
xkbcommon = "0.4"
input = "0.6"

# Image handling for wallpapers
image = "0.24"

# Directory and file utilities
dirs = "5.0"

# Bitflags for modifier keys
bitflags = "2.4"

# Indexmap for ordered hashmaps
indexmap = { version = "2.1", features = ["serde"] }

# UUID for window/container identification
uuid = { version = "1.6", features = ["v4", "serde"] }

# Regex for window matching
regex = "1.10"

[dev-dependencies]
criterion = "0.4"
proptest = "1.2"
tempfile = "3.10"
serial_test = "3.0"
pretty_assertions = "1.4"

[[bench]]
name = "layout_bench"
harness = false

[[bench]]
name = "window_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
